--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -21,9 +21,18 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZfW-vV-7Zg">
                                 <rect key="frame" x="0.0" y="64" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" text="" placeholder="カテゴリ検索" showsCancelButton="YES" id="yUr-O1-wn9">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                    <scopeButtonTitles>
+                                        <string>カテゴリ検索</string>
+                                        <string>Title</string>
+                                    </scopeButtonTitles>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="lZQ-CG-UyD" detailTextLabel="y73-84-4g8" style="IBUITableViewCellStyleSubtitle" id="vfN-zm-dna">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="84" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vfN-zm-dna" id="jYH-Xf-bf2">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -70,13 +79,14 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="searchBarField" destination="yUr-O1-wn9" id="k2g-gk-S7r"/>
                         <outlet property="tableView" destination="ZfW-vV-7Zg" id="qYh-Mv-oKt"/>
                         <segue destination="0Bw-QA-56Y" kind="show" identifier="cellSegue" id="E0B-Ij-jSv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="905" y="133"/>
+            <point key="canvasLocation" x="904.79999999999995" y="132.68365817091455"/>
         </scene>
         <!--Input View Controller-->
         <scene sceneID="Irx-6B-aPg">
@@ -123,8 +133,8 @@
                                     <!--2019-02-28 17:05:13 +0000-->
                                 </date>
                             </datePicker>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EQz-Ox-dBQ">
-                                <rect key="frame" x="10" y="467" width="355" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EQz-Ox-dBQ">
+                                <rect key="frame" x="16" y="508" width="261" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -163,7 +173,7 @@
                         <viewLayoutGuide key="safeArea" id="DPK-8K-o9j"/>
                     </view>
                     <connections>
-                        <outlet property="categoryTextField" destination="EQz-Ox-dBQ" id="rUJ-fN-WI1"/>
+                        <outlet property="categoryTextField" destination="EQz-Ox-dBQ" id="Bmd-Sn-cb0"/>
                         <outlet property="contentsTextField" destination="TJV-uc-B3E" id="ajG-CH-9jV"/>
                         <outlet property="datePicker" destination="gjJ-GB-0Vu" id="arx-r3-qNO"/>
                         <outlet property="titleTextField" destination="EhS-0P-EdL" id="clT-8j-5ep"/>
@@ -193,6 +203,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="E0B-Ij-jSv"/>
+        <segue reference="Tz7-Y4-UoG"/>
     </inferredMetricsTieBreakers>
 </document>
