--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -133,8 +133,8 @@
                                     <!--2019-02-28 17:05:13 +0000-->
                                 </date>
                             </datePicker>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EQz-Ox-dBQ">
-                                <rect key="frame" x="16" y="508" width="261" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EQz-Ox-dBQ">
+                                <rect key="frame" x="10" y="467" width="355" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -145,6 +145,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IEd-lb-2xO">
+                                <rect key="frame" x="10" y="507" width="355" height="30"/>
+                                <state key="normal" title="カテゴリ作成"/>
+                                <connections>
+                                    <segue destination="FR1-G7-gD2" kind="show" id="eyM-KD-kRY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -162,10 +169,13 @@
                             <constraint firstItem="f6X-Wu-DCI" firstAttribute="top" secondItem="gjJ-GB-0Vu" secondAttribute="bottom" constant="10" id="QG3-EW-gPb"/>
                             <constraint firstItem="gjJ-GB-0Vu" firstAttribute="trailing" secondItem="DPK-8K-o9j" secondAttribute="trailing" id="RJc-M0-afF"/>
                             <constraint firstItem="DPK-8K-o9j" firstAttribute="trailing" secondItem="TJV-uc-B3E" secondAttribute="trailing" constant="10" id="UV4-uT-ITa"/>
+                            <constraint firstItem="DPK-8K-o9j" firstAttribute="trailing" secondItem="IEd-lb-2xO" secondAttribute="trailing" constant="10" id="Uam-NH-tMf"/>
                             <constraint firstItem="DPK-8K-o9j" firstAttribute="trailing" secondItem="f6X-Wu-DCI" secondAttribute="trailing" constant="10" id="UoI-Yu-4KT"/>
+                            <constraint firstItem="IEd-lb-2xO" firstAttribute="top" secondItem="EQz-Ox-dBQ" secondAttribute="bottom" constant="10" id="dmS-TM-VTM"/>
                             <constraint firstItem="EhS-0P-EdL" firstAttribute="leading" secondItem="DPK-8K-o9j" secondAttribute="leading" constant="10" id="jSu-54-S6H"/>
                             <constraint firstItem="TJV-uc-B3E" firstAttribute="top" secondItem="dCq-R9-cRW" secondAttribute="bottom" constant="10" id="k33-yB-Rhr"/>
                             <constraint firstItem="EhS-0P-EdL" firstAttribute="top" secondItem="eul-PY-elG" secondAttribute="bottom" constant="10" id="kGH-Xw-wVP"/>
+                            <constraint firstItem="IEd-lb-2xO" firstAttribute="leading" secondItem="U9F-NV-dNY" secondAttribute="leading" constant="10" id="kbg-AX-Tdt"/>
                             <constraint firstItem="DPK-8K-o9j" firstAttribute="trailing" secondItem="EhS-0P-EdL" secondAttribute="trailing" constant="10" id="mmb-B4-X7i"/>
                             <constraint firstItem="DPK-8K-o9j" firstAttribute="trailing" secondItem="EQz-Ox-dBQ" secondAttribute="trailing" constant="10" id="uob-pW-Bx7"/>
                             <constraint firstItem="TJV-uc-B3E" firstAttribute="leading" secondItem="DPK-8K-o9j" secondAttribute="leading" constant="10" id="zFw-Sj-Npb"/>
@@ -182,6 +192,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sKk-zP-o0O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1740" y="132.68365817091455"/>
+        </scene>
+        <!--Input Category View Controller-->
+        <scene sceneID="SHK-KM-WGs">
+            <objects>
+                <viewController id="FR1-G7-gD2" customClass="InputCategoryViewController" customModule="taskapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5aQ-bl-Eat">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリ作成" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="peH-eb-zGM">
+                                <rect key="frame" x="10" y="74" width="355" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ban-dI-s3y">
+                                <rect key="frame" x="10" y="105" width="355" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ban-dI-s3y" firstAttribute="top" secondItem="peH-eb-zGM" secondAttribute="bottom" constant="10" id="7Mm-ej-e2L"/>
+                            <constraint firstItem="peH-eb-zGM" firstAttribute="leading" secondItem="ndQ-Mf-50e" secondAttribute="leading" constant="10" id="EES-mB-AYs"/>
+                            <constraint firstItem="ndQ-Mf-50e" firstAttribute="trailing" secondItem="Ban-dI-s3y" secondAttribute="trailing" constant="10" id="G0o-54-Xvo"/>
+                            <constraint firstItem="ndQ-Mf-50e" firstAttribute="trailing" secondItem="peH-eb-zGM" secondAttribute="trailing" constant="10" id="IbF-zj-pzc"/>
+                            <constraint firstItem="peH-eb-zGM" firstAttribute="top" secondItem="ndQ-Mf-50e" secondAttribute="top" constant="10" id="X5o-IT-XJc"/>
+                            <constraint firstItem="Ban-dI-s3y" firstAttribute="leading" secondItem="ndQ-Mf-50e" secondAttribute="leading" constant="10" id="bpb-vk-eWa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ndQ-Mf-50e"/>
+                    </view>
+                    <connections>
+                        <outlet property="categorytitleTextField" destination="Ban-dI-s3y" id="YYq-T6-Kap"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EQ5-5v-dM4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2474" y="133"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="zQR-ol-gBv">
