タスク一覧で「全て」の要素も追加、カテゴリ作成時に空欄のときはデータを作成しない処理を追加

--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -19,15 +19,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZfW-vV-7Zg">
-                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="74" width="375" height="549"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <pickerView key="tableHeaderView" contentMode="scaleToFill" id="O5j-2H-QuT">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <pickerView key="tableFooterView" contentMode="scaleToFill" id="UuR-eQ-hir">
+                                    <rect key="frame" x="0.0" y="72" width="375" height="216"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 </pickerView>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="lZQ-CG-UyD" detailTextLabel="y73-84-4g8" style="IBUITableViewCellStyleSubtitle" id="vfN-zm-dna">
-                                        <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vfN-zm-dna" id="jYH-Xf-bf2">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -56,8 +56,8 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZfW-vV-7Zg" secondAttribute="bottom" id="5Sm-mb-pwv"/>
-                            <constraint firstItem="ZfW-vV-7Zg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="AOc-X6-MIK"/>
                             <constraint firstItem="ZfW-vV-7Zg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Y0b-qQ-sFc"/>
+                            <constraint firstItem="ZfW-vV-7Zg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="jcO-Uk-WwI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZfW-vV-7Zg" secondAttribute="trailing" id="vi6-2z-5F7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -74,7 +74,7 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="searchPickerView" destination="O5j-2H-QuT" id="VNz-7M-krW"/>
+                        <outlet property="searchPickerView" destination="UuR-eQ-hir" id="feE-tM-4S6"/>
                         <outlet property="tableView" destination="ZfW-vV-7Zg" id="qYh-Mv-oKt"/>
                         <segue destination="0Bw-QA-56Y" kind="show" identifier="cellSegue" id="E0B-Ij-jSv"/>
                     </connections>
